# NeuralNetworkProject

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  NeuralNetworkProject.cbp  Neural_Network.ipynb  README.md  TODO.txt  activation.cpp  activation.h  cmake_install.cmake  dense.cpp  dense.h  layer.cpp  layer.h  matrix_multiplication_simple.cpp  neural_network.cpp  neural_network.h  neural_network_config.h  test.cpp  test.h  test_test
.ipynb_checkpoints/: Neural_Network-checkpoint.ipynb  Neural_Network_test-checkpoint.ipynb
mpi/: mpi_utils.cpp  mpi_utils.h
resources/: Neural_Network.ipynb  Neural_Network_test.ipynb  data.txt  iris_model.txt  main.cpp  matrix_multiplication_simple.cpp  matrix_multiplication_threads.cpp  mnist_model.txt  model.txt  model2.txt  neural_network_2_layer.py  result.txt  tsafe_queue.h  xor_model.txt
src/: activation.cpp  activation.h  csv.cpp  dense.cpp  dense.h  layer.h  matrix_multiplication.cpp  matrix_utils.cpp  matrix_utils.h  neural_network.cpp  neural_network.h  neural_network_config.cpp  neural_network_config.h  test.cpp  test_mm.cpp  test_nn.cpp  test_nn.h
tests/: test_mnist.cpp  test_mpi.cpp  test_nn.cpp  test_nn.h  test_threads.cpp  test_utils.cpp  test_utils.h  test_xor.cpp  test_xor.h
thread/: test_mm.cpp  threads_multiplication.cpp  threads_multiplication.h
threads/: threads_utils.cpp
utils/: csv.cpp  csv.h  matrix_utils.h  test_utils.h
